examples/ex3/test_cases/failing/check21_not_consists_of_non_bool.java
class Main {
    public static void main(String[] a) {
        System.out.println(3);
    }
}

class Simple {

    public boolean func() {
        int a;

        a = 5;

        return !a;
    }
}